--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.9"
-
 services:
   mysql:
     image: mysql:8.4
@@ -12,9 +10,6 @@ services:
       MYSQL_PASSWORD: ${MYSQL_PASSWORD:-app_pass}
     ports:
       - "3306:3306"
-    volumes:
-      - mysql_data:/var/lib/mysql
-      - ./mysql/init:/docker-entrypoint-initdb.d:ro
     healthcheck:
       test:
         [
@@ -40,7 +35,4 @@ services:
       - "8080:8080"
     environment:
       ADMINER_DEFAULT_SERVER: mysql
-      # ADMINER_DESIGN: pepa-linha  # <- exemple de thème (facultatif)
-
-volumes:
-  mysql_data:
+      ADMINER_DESIGN: pepa-linha
